# auto_runhalo

./: CMakeLists.txt  README.md
samples/: conf-equipment.xml
scripts/: autorun.sh  fake_runhalo.sh  runhalo
src/: main.c
